// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropMenuButton default 1`] = `
<div
  className="sc-iRbamj fnZPlr sc-brqgnP kbvsdM sc-cvbbAY LWVqH"
  disabled={false}
  type="customs"
>
  <span
    className="sc-fMiknA dBUfWv"
    disabled={false}
    type="customs"
  />
  <div
    className="sc-jlyJG esuLIv sc-jWBwVP kcUcpt"
  >
    <span
      checked={false}
      className="sc-gipzik imnXrh sc-gPEVay gfTKug"
      disabled={false}
      type="customs"
    >
      <input
        className="sc-eHgmQL jmRilE"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-fBuWsC hxlDcL"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="customs"
    >
      <input
        className="sc-eHgmQL jmRilE"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton divided={false} 1`] = `
<div
  checked={false}
  className="sc-cMljjf hyqmPG sc-brqgnP kbvsdM sc-cvbbAY LWVqH"
  disabled={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="customs"
>
  <input
    className="sc-eHgmQL jmRilE"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    type="button"
  />
  <div
    className="sc-jAaTju iSZmQv sc-jWBwVP kcUcpt"
  >
    <span
      className="sc-gPEVay gfTKug"
    />
    <span
      className="sc-jDwBTQ cDkhzV"
    >
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=basic 1`] = `
<div
  className="sc-csuQGl kiSxMq sc-cvbbAY LWVqH"
>
  <div
    checked={false}
    className="sc-Rmtcm kgfwWJ sc-jWBwVP kcUcpt"
    disabled={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <input
      className="sc-eHgmQL jmRilE"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      type="button"
    />
    <span
      checked={false}
      className="sc-bRBYWo joyODz"
      disabled={false}
    >
      <span
        className="sc-hzDkRC gCtYQo"
      />
      <span
        className="sc-jhAzac ewRgCT sc-jDwBTQ cDkhzV"
      >
        <i
          className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`DropMenuButton type=primary,divided={true} 1`] = `
<div
  className="sc-iRbamj fnZPlr sc-brqgnP lgJaqY sc-cvbbAY LWVqH"
  disabled={false}
  type="primary"
>
  <span
    className="sc-fMiknA dmgNtv"
    disabled={false}
    type="primary"
  />
  <div
    className="sc-jlyJG esuLIv sc-jWBwVP kcUcpt"
  >
    <span
      checked={false}
      className="sc-gipzik cIYZkz sc-gPEVay gfTKug"
      disabled={false}
      type="primary"
    >
      <input
        className="sc-eHgmQL jmRilE"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        type="button"
      />
    </span>
    <span
      checked={false}
      className="sc-fBuWsC elndBn"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="primary"
    >
      <input
        className="sc-eHgmQL jmRilE"
        disabled={false}
        onBlur={[Function]}
        type="button"
      />
      <i
        className="lugia-icon-direction_down  sc-gzVnrw VXFcC"
      />
    </span>
  </div>
</div>
`;
